--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,20 @@
-scipy
-numpy
-seaborn
-matplotlib
-scikit-learn
+# Core dependencies
+streamlit>=1.28.0
+numpy>=1.24.0
+pandas>=2.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+scipy>=1.10.0
+scikit-learn>=1.3.0
+plotly>=5.17.0
+
+# Interactive plotting (optional but recommended)
+streamlit-plotly-events>=0.0.6
+
+# AI/RAG dependencies (optional for AI features)
+PyPDF2>=3.0.0
+python-docx>=0.8.11
+openai>=0.28.0
+faiss-cpu>=1.7.4
+sentence-transformers>=2.2.2
+requests>=2.31.0
