--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-# Core dependencies
+# requirements.txt - RamanEye Easy Viewer Secure Edition
+
+# =============================================================================
+# Core Dependencies
+# =============================================================================
 streamlit>=1.28.0
 numpy>=1.24.0
 pandas>=2.0.0
@@ -8,13 +12,31 @@ scipy>=1.10.0
 scikit-learn>=1.3.0
 plotly>=5.17.0
 
-# Interactive plotting (optional but recommended)
+# =============================================================================
+# Interactive & Visualization
+# =============================================================================
 streamlit-plotly-events>=0.0.6
 
-# AI/RAG dependencies (optional for AI features)
+# =============================================================================
+# File Processing & Data Export
+# =============================================================================
+openpyxl>=3.1.0
+xlsxwriter>=3.1.0
+
+# =============================================================================
+# AI/RAG Dependencies (for AI Analysis Features)
+# =============================================================================
 PyPDF2>=3.0.0
 python-docx>=0.8.11
 openai==0.28.0
 faiss-cpu>=1.7.4
 sentence-transformers>=2.2.2
 requests>=2.31.0
+
+# =============================================================================
+# Security & Authentication
+# =============================================================================
+hashlib  # Built-in Python module
+cryptography>=41.0.0  # Enhanced encryption
+passlib>=1.7.4  # Password hashing utilities
+bcrypt>=4.0.1  # Secure password hashing
