--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-# requirements.txt - RamanEye Easy Viewer Secure Edition
-
+# requirements.txt - RamanEye Easy Viewer Secure Edition with PDF Report
 # =============================================================================
 # Core Dependencies
 # =============================================================================
@@ -22,6 +21,13 @@ streamlit-plotly-events>=0.0.6
 # =============================================================================
 openpyxl>=3.1.0
 xlsxwriter>=3.1.0
+
+# =============================================================================
+# PDF Report Generation
+# =============================================================================
+reportlab>=4.0.4
+Pillow>=10.0.0
+kaleido>=0.2.1
 
 # =============================================================================
 # AI/RAG Dependencies (for AI Analysis Features)
